fix：修复知识库详情中文件列表不显示文件大小的问题